Model classes are created

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GeorgianGym-43ACFCDB-1277-4244-9CBF-6E13D1C5F427;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=TANU-BAL-HT; Database=GeorgianGym;Integrated Security = True"
   },
   "Logging": {
     "LogLevel": {
